--- a/Client/index.html
+++ b/Client/index.html
@@ -4,22 +4,10 @@
 	<meta charset="utf-8">
 	<title>Speso Kolena</title>
 
-	<script src="http://${serverAddress}/socket.io/socket.io.js"></script>
-	<script>
-		const socket = io()
-		socket.on('updateUserColor', (data)=>{
-			console.log(data)
-		})
-		socket.on('updateUserName', (data)=>{
-			console.log(data)
-		})
-		
-		function sendCommand() {
-			socket.emit('updateUserName', Math.random())
-		}
-	</script>
+	<script src="scripts.js"></script>
+	<script src="socket.io/socket.io.js"></script>
 </head>
-<body>
-	<button onClick="sendCommand()">SEND</button>
+<body onLoad="init()">
+	<div id='userList'>Loading...</div>
 </body>
 </html>
