Generate grid and sending to clients

--- a/Client/index.html
+++ b/Client/index.html
@@ -4,10 +4,12 @@
 	<meta charset="utf-8">
 	<title>Speso Kolena</title>
 
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
 	<script src="scripts.js"></script>
 	<script src="socket.io/socket.io.js"></script>
 </head>
-<body onLoad="init()">
+<body>
 	<div id='userList'>Loading...</div>
+	<div id='grid'>Loading...</div>
 </body>
 </html>
