Updated minifier and added file cache

--- a/Client/index.html
+++ b/Client/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="en_GB">
+<html lang="en_US">
 <head>
 	<meta charset="utf-8">
 	<title>Speso Kolena</title>
 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
-	<script src="scripts.js"></script>
+	<script src="scripts/commands.js"></script>
 	<script src="socket.io/socket.io.js"></script>
 </head>
 <body>
