Improved display with colors

--- a/Client/index.html
+++ b/Client/index.html
@@ -6,10 +6,14 @@
 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
 	<script src="scripts/commands.js"></script>
+	<script src="scripts/styles.js"></script>
 	<script src="socket.io/socket.io.js"></script>
+	<link rel="stylesheet" type="text/css" href="styles/mainStyle.css">
 </head>
 <body>
 	<div id='userList'>Loading...</div>
-	<div id='grid'>Loading...</div>
+	<div class="squareContainer">
+		<div id='grid'>Loading...</div>
+	</div>
 </body>
 </html>
